fix drag flicker, pin add-filter button to bottom, remove red exclude text

--- a/packages/react-components/src/base-components/checkbox/Checkbox.module.css
+++ b/packages/react-components/src/base-components/checkbox/Checkbox.module.css
@@ -55,6 +55,10 @@
     }
   }
 
+  &[data-excluding][data-checked] {
+    background-color: var(--osdk-checkbox-bg-hover);
+  }
+
   &:focus-visible {
     outline: var(--osdk-focus-outline);
     outline-offset: calc(-1 * var(--osdk-focus-visible-outline-offset));
