--- a/packages/react-components/src/filter-list/base/ExcludeDropdown.module.css
+++ b/packages/react-components/src/filter-list/base/ExcludeDropdown.module.css
@@ -43,10 +43,6 @@
   }
 }
 
-.trigger[data-excluding] {
-  color: var(--osdk-intent-danger-rest);
-}
-
 .triggerLabel {
   white-space: nowrap;
 }
