--- a/packages/react-components/src/filter-list/base/FilterList.module.css
+++ b/packages/react-components/src/filter-list/base/FilterList.module.css
@@ -92,10 +92,7 @@
 .addButtonContainer {
   display: flex;
   justify-content: center;
-  position: sticky;
-  bottom: 0;
   padding-top: var(--osdk-filter-list-addButton-padding-top);
-  background: var(--osdk-filter-list-addButton-container-bg);
 }
 
 .addButtonContainer > * {
