--- a/packages/react-components/src/filter-list/base/inputs/CheckboxListInput.module.css
+++ b/packages/react-components/src/filter-list/base/inputs/CheckboxListInput.module.css
@@ -59,7 +59,6 @@
 
 .valueText[data-excluding] {
   text-decoration: line-through;
-  color: var(--osdk-intent-danger-rest);
 }
 
 .colorDot {
