--- a/packages/react-components/src/filter-list/base/inputs/ListogramInput.module.css
+++ b/packages/react-components/src/filter-list/base/inputs/ListogramInput.module.css
@@ -75,7 +75,6 @@
 
 .label[data-excluding] {
   text-decoration: line-through;
-  color: var(--osdk-intent-danger-rest);
 }
 
 .bar {
